Backgrounds/Animation Tweaks

--- a/mission/destination/index.html
+++ b/mission/destination/index.html
@@ -297,7 +297,7 @@
 	<p class="vertical-center">LANDING SITE</p>
 	</div>
 
-	<div class="section-full-width-height container">
+	<div class="section-half-height container">
 		<p class="location-text vertical-center-mission">The Ares Colony will be situated in the Chryse Chaos, an area slightly above the equator near Mars' largest canyon, Valles Marineris. The landing site will be on the south-west rim of one of the craters in the area. This crater is not yet named, and is decently large with a diameter of roughly 20 kilometers. It is around 200 km west of another major crater, Crater Mojave and 200 km north-east of Da Vinci Crater.
 		</p>
 		<table id="location-table" class="vertical-center-mission">
@@ -340,7 +340,6 @@
 					<div id="large-map-marker"></div>
 				</td>
 				<td class="mars-map-center-cell">
-					<span class="mars-map-vertical-line horizontal-center"></span>
 				</td>
 				<td class="mars-map container" id="small-mars-map">
 					<div id="small-map-marker">
