--- a/purpose/index.html
+++ b/purpose/index.html
@@ -178,7 +178,7 @@
 <body id="body" class="body" style="background-color: black; width: 100vw; font-weight: 300; padding: 0px; border: 0px; margin: 0px;"><center>
 
 
-	<div class="section-full-width-height home-cover" style="">
+	<div class="section-full-width-height home-cover" style="background:url(https://Ares.tianqifeng1.repl.co/ipsc-saturn.png);background-position:center;background-size:cover">
 		<img class="scrollIndicator" src="https://Ares.tianqifeng1.repl.co/Scrollindicator.png" height="33.5px" width="32.5px" style="padding-top:90vh">
 		<p id="cover-text" class="vertical-center" style="color:white;margin:0;border:0;padding-left:5vw;font-weight:100;font-size:7vh;letter-spacing:5vw;font-family:-apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;">
 			PURPOSE
@@ -188,10 +188,9 @@
 	
 	<div class="quarter-space" style=""></div>
 
-	<div class="quarter-space" id="purpose-fixed-bg"></div>
 
 		
-	<div class="container" style="background-color:black;font-size:22.5px;height:100vh;width:100%;text-align:center;">
+	<div class="container" style="background-color:black;font-size:22.5px;height:50vh;width:100%;text-align:center;">
 		<center><p class="vertical-center" style="width:80%;color:white;font-family:-apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;line-height:40px">
 				Mars is such an intriguing planet. This is because it is so similar to the Earth. With a similar axial tilt, average temperature, day length and size, there has even been evidence of liquid water on the planet's surface, many years ago. These reasons make the exploration of this world a certainty. Throughout history, multiple nations have sent multiple satellites, rovers and landers to the red planet. One thing that has not happenned yet, however, is human exploration of Mars. Ares will be the first step in this endeavor. It will allow the first ever humans to step on the surface of Mars.
 		</p></center>
